--- a/index.css
+++ b/index.css
@@ -57,21 +57,21 @@ footer #footer-above{
 }
 nav{
   font-size:13px;
-  background:#722872;
+  background:#4c4cff;
   -webkit-transition:all .3s;
   transition:all .3s;
 }
 @media(max-width:768px){
   nav{padding:5px;text-align:center;margin:0 auto;width:120%;
   }
-  nav .active a{color:#722872;background:#bbb;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
+  nav .active a{color:#4c4cff;background:#bbb;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
   }
 }
 .nav>li{height:100%;text-transform:uppercase;font-weight:bold;letter-spacing:2px;display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex;
 }
 .nav>li a{color:#ffffff;padding:10px 20px;
 }
-.nav>li a:hover{color:#722872;background:#bbb;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
+.nav>li a:hover{color:#4c4cff;background:#bbb;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 .navbar-toggle{margin-right:0;
 }
