--- a/index.css
+++ b/index.css
@@ -146,7 +146,7 @@ form .row:first-child .form-item{border-top:1px solid #fff;
 }
 footer{
   color:#fff;
-  background-color:#4c4cff;
+  background-color:#aaa;
   text-align:center;
   box-shadow:0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
