--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ nav{
 }
 .nav>li a{color:#ffffff;padding:10px 20px;
 }
-.nav>li a:hover{color:#ffffff;background:#4c4cff;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
+.nav>li a:hover{color:#000000;background:#4c4cff;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
 }
 .navbar-toggle{margin-right:0;
 }
