--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ nav{
   nav .active a{color:#4c4cff;background:#4c4cff;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
   }
 }
-.nav>li{height:100%;text-transform:uppercase;font-weight:bold;letter-spacing:2px;display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex;
+.nav>li{height:100%;color:#000000;text-transform:uppercase;font-weight:bold;letter-spacing:2px;display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex;
 }
 .nav>li a{color:#ffffff;padding:10px 20px;
 }
